# programming_c_labs

./: 5.c  6.c  7.c  Makefile  README.md  fuzzy.c  sett.c  sett.h
qt_creator/graph/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwidget.cpp  plotwidget.h
qt_creator/rotor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt_creator/svetofor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt_creator/wierd_calc/: CMakeLists.txt
qt_creator/wierd_calc/wierd_calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
